--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "pwstorage-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fingerprintjs/fingerprintjs": "^4.4.0",
-    "@mui/material": "^5.15.19",
-    "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.2",
-    "js-cookie": "^3.0.5",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "pwstorage-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@fingerprintjs/fingerprintjs": "^4.4.0",
+        "@mui/material": "^5.15.19",
+        "@reduxjs/toolkit": "^2.2.5",
+        "axios": "^1.7.2",
+        "js-cookie": "^3.0.5",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-redux": "^9.1.2"
+    },
+    "devDependencies": {
+        "@types/js-cookie": "^3.0.6",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "8.57.0",
+        "eslint-config-next": "14.2.3",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
