--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/material": "^5.15.19",
         "@reduxjs/toolkit": "^2.2.5",
         "axios": "^1.7.2",
+        "blakejs": "^1.2.1",
         "js-cookie": "^3.0.5",
         "next": "14.2.3",
         "react": "^18",
